--- a/angular.json
+++ b/angular.json
@@ -66,6 +66,24 @@
         },
         "test": {
           "builder": "@angular/build:unit-test"
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "angular-storybook-vitest:build",
+            "compodoc": false,
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "angular-storybook-vitest:build",
+            "compodoc": false,
+            "outputDir": "storybook-static"
+          }
         }
       }
     }
