--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "storybook": "ng run angular-storybook-vitest:storybook",
-    "build-storybook": "ng run angular-storybook-vitest:build-storybook"
+    "build-storybook": "ng run angular-storybook-vitest:build-storybook",
+    "test-storybook": "ng run angular-storybook-vitest:test-storybook"
   },
   "prettier": {
     "printWidth": 100,
@@ -30,22 +31,24 @@
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
+    "@angular/platform-browser-dynamic": "^21.0.0",
     "@angular/router": "^21.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.3",
-    "@angular/cli": "^21.0.3",
-    "@angular/compiler-cli": "^21.0.0",
-    "jsdom": "^27.1.0",
-    "typescript": "~5.9.2",
-    "vitest": "^4.0.8",
-    "storybook": "^10.1.9",
-    "@storybook/angular": "^10.1.9",
     "@angular-devkit/build-angular": "^21.0.0",
     "@angular-devkit/architect": "^0.2100.0",
     "@angular-devkit/core": "^21.0.0",
-    "@angular/platform-browser-dynamic": "^21.0.0"
+    "@angular/build": "^21.0.3",
+    "@angular/cli": "^21.0.3",
+    "@angular/compiler-cli": "^21.0.0",
+    "@storybook/angular": "^10.1.9",
+    "@storybook/addon-vitest": "^10.1.9",
+    "@vitest/browser-playwright": "^4.0.16",
+    "jsdom": "^27.1.0",
+    "storybook": "^10.1.9",
+    "typescript": "~5.9.2",
+    "vitest": "^4.0.8"
   }
 }
